@@ -1,49 +1,34 @@
 # run.ps1
-function Get-LatestVersion {
-    param (
-        [string]$moduleName
-    )
 
-    # Find the JAR files and sort them by version while excluding javadoc and sources
-    $jarFiles = Get-ChildItem -Path "$env:USERPROFILE\.m2\repository\org\openjfx" -Recurse -File |
-                Where-Object { $_.Name -like "${moduleName}-*.jar" -and $_.Name -notmatch "(javadoc|sources)" } |
-                Sort-Object Name -Descending
+# Change to the directory where the script is located
+Set-Location $PSScriptRoot
 
-    # Return the latest version's path
-    if ($jarFiles.Count -gt 0) {
-        return $jarFiles[0].FullName
-    } else {
-        return $null
-    }
-}
-
-$fxBasePath = Get-LatestVersion "javafx-base"
-$fxControlsPath = Get-LatestVersion "javafx-controls"
-$fxFxmlPath = Get-LatestVersion "javafx-fxml"
-$fxGraphicsPath = Get-LatestVersion "javafx-graphics"
-
-$fxPath = "$fxBasePath;$fxControlsPath;$fxFxmlPath;$fxGraphicsPath"
-
-if (-not $fxPath) {
-    Write-Host "No es pot trobar el mòdul JavaFX al repositori Maven local."
-    exit 1
-}
-
-# Opcions comunes per a MAVEN_OPTS
-$env:MAVEN_OPTS = "--add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.nio=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED --module-path $fxPath --add-modules javafx.controls,javafx.fxml,javafx.graphics"
-
-# Resta de l'script
+# Set MAVEN_OPTS environment variable
+$env:MAVEN_OPTS="--add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.nio=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED"
 
 # Check for the first argument and set it as the main class
 $mainClass = $args[0]
 
-Write-Output "Setting MAVEN_OPTS to: $MAVEN_OPTS"
-Write-Output "Main Class: $mainClass"
+Write-Host "Setting MAVEN_OPTS to: $env:MAVEN_OPTS"
+Write-Host "Main Class: $mainClass"
 
-# Split the execArg into an array
-$execArgs = @("-PrunMain", "-Dexec.mainClass=$mainClass")
+# Construct Maven argument for the main class
+$mavenMainClassArg = "-Dexec.mainClass=$mainClass"
 
-Write-Output "Exec args: $($execArgs -join ' ')"
+# Get the rest of the arguments (excluding the first one for mainClass) and join them into a single string
+$javaArgsArray = $args[1..($args.Length - 1)]
+$javaArgsStr = $javaArgsArray -join ' '
+
+
+# Create a separate argument for exec.args
+$execArgsForJava = "-Dexec.args='$javaArgsStr'"
+
+Write-Host "Maven Main Class Argument: $mavenMainClassArg"
+Write-Host "Java Program Arguments: $javaArgsStr"
+
+# Execute the Maven commands
+mvn clean test-compile
+mvn exec:java -PrunMain $mavenMainClassArg $execArgsForJava
 
 # Execute mvn command
 mvn clean test-compile exec:java $execArgs
